--- a/app/src/main/res/layout/fragment_register_resident.xml
+++ b/app/src/main/res/layout/fragment_register_resident.xml
@@ -35,6 +35,7 @@
         android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@+id/bt_register"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -59,7 +60,8 @@
                     android:layout_height="wrap_content"
                     android:lines="1"
                     android:maxLength="250"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                     />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,7 +84,8 @@
                     android:layout_marginTop="10dp"
                     android:lines="1"
                     android:maxLength="50"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                   />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -104,7 +107,8 @@
                     android:layout_marginTop="10dp"
                     android:lines="1"
                     android:maxLength="50"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                     />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -127,7 +131,8 @@
                     android:inputType="number"
                     android:lines="1"
                     android:maxLength="50"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                     />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -149,7 +154,8 @@
                     android:layout_marginTop="10dp"
                     android:lines="1"
                     android:maxLength="50"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -173,7 +179,8 @@
                     android:inputType="textCapCharacters"
                     android:lines="1"
                     android:maxLength="50"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                     />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -192,6 +199,7 @@
                 android:id="@+id/img_profile"
                 android:layout_width="117dp"
                 android:layout_height="97dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/cam"
                 app:layout_constraintStart_toStartOf="parent"
@@ -210,6 +218,7 @@
                 android:id="@+id/img_car"
                 android:layout_width="117dp"
                 android:layout_height="97dp"
+                android:layout_marginEnd="16dp"
                 android:src="@drawable/cam"
                 app:layout_constraintBottom_toBottomOf="@+id/img_profile"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -226,6 +235,126 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/img_car"
                 app:layout_constraintTop_toBottomOf="@+id/layout_carReg" />
+
+            <ImageView
+                android:id="@+id/img_car2"
+                android:layout_width="117dp"
+                android:layout_height="97dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/cam"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewcar2" />
+
+            <TextView
+                android:id="@+id/textViewcar2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Car photo (Optional)"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_profile" />
+
+            <ImageView
+                android:id="@+id/img_car3"
+                android:layout_width="117dp"
+                android:layout_height="97dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/cam"
+                app:layout_constraintBottom_toBottomOf="@+id/img_car2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/img_car2" />
+
+            <TextView
+                android:id="@+id/textViewcar3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="Car photo (Optional)"
+                app:layout_constraintBottom_toTopOf="@+id/img_car2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/img_car"
+                app:layout_constraintTop_toBottomOf="@+id/img_car" />
+
+
+            <ImageView
+                android:id="@+id/img_car4"
+                android:layout_width="117dp"
+                android:layout_height="97dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:src="@drawable/cam"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewcar4" />
+
+            <TextView
+                android:id="@+id/textViewcar4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Car photo (Optional)"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_car2" />
+
+            <ImageView
+                android:id="@+id/img_car5"
+                android:layout_width="117dp"
+                android:layout_height="97dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/cam"
+                app:layout_constraintBottom_toBottomOf="@+id/img_car4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/img_car4" />
+
+            <TextView
+                android:id="@+id/textViewcar5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="Car photo (Optional)"
+                app:layout_constraintBottom_toBottomOf="@+id/textViewcar4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/img_car"
+                app:layout_constraintTop_toTopOf="@+id/textViewcar4" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@+id/img_car"
+                app:layout_constraintEnd_toEndOf="@+id/img_car"
+                app:srcCompat="@mipmap/ic_add_other_icon" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@+id/img_car2"
+                app:layout_constraintEnd_toEndOf="@+id/img_car2"
+                app:srcCompat="@mipmap/ic_add_other_icon" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@+id/img_car3"
+                app:layout_constraintEnd_toEndOf="@+id/img_car3"
+                app:srcCompat="@mipmap/ic_add_other_icon" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@+id/img_car4"
+                app:layout_constraintEnd_toEndOf="@+id/img_car4"
+                app:srcCompat="@mipmap/ic_add_other_icon" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
