--- a/app/src/main/res/layout/fragment_additional_cars.xml
+++ b/app/src/main/res/layout/fragment_additional_cars.xml
@@ -31,7 +31,8 @@
         app:layout_constraintBottom_toTopOf="@+id/scrollView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 
     <ScrollView
@@ -60,7 +61,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="48dp"
                 android:hint="Enter car registration"
                 app:boxStrokeColor="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -92,38 +93,15 @@
 
             <ImageView
                 android:id="@+id/img_car"
-                android:layout_width="117dp"
-                android:layout_height="97dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="211dp"
+                android:layout_height="121dp"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/cam"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_carReg2"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:hint="Enter car registration"
-                app:boxStrokeColor="@color/colorPrimaryDark"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_car">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_carReg2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textCapCharacters"
-                    android:lines="1"
-                    android:maxLength="50"
-                    android:textSize="16sp" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/textView6"
@@ -135,151 +113,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_carReg" />
 
-            <ImageView
-                android:id="@+id/img_car2"
-                android:layout_width="117dp"
-                android:layout_height="97dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/cam"
-                android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewcar2" />
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_carReg3"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_add_cars"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:hint="Enter car registration"
-                app:boxStrokeColor="@color/colorPrimaryDark"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_car2">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_carReg3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textCapCharacters"
-                    android:lines="1"
-                    android:maxLength="50"
-                    android:textSize="16sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:id="@+id/textViewcar2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Please capture car image "
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layout_carReg2" />
-
-
-            <ImageView
-                android:id="@+id/img_car3"
-                android:layout_width="117dp"
-                android:layout_height="97dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:src="@drawable/cam"
-                android:visibility="visible"
-                app:layout_constraintBottom_toTopOf="@+id/layout_carReg4"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewcar3"
-                app:layout_constraintVertical_bias="0.47000003" />
+                app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
             <TextView
-                android:id="@+id/textViewcar3"
-                android:layout_width="wrap_content"
+                android:id="@+id/textView13"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Please capture car Image"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layout_carReg3" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_carReg4"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:hint="Enter car registration"
-                app:boxStrokeColor="@color/colorPrimaryDark"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:text="Additional Cars"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_car3">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_carReg4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textCapCharacters"
-                    android:lines="1"
-                    android:maxLength="50"
-                    android:textSize="16sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:clickable="true"
-                app:layout_constraintBottom_toBottomOf="@+id/img_car"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/img_car"
-                app:srcCompat="@mipmap/ic_add_other_icon" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:clickable="true"
-                app:layout_constraintBottom_toBottomOf="@+id/img_car2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@mipmap/ic_add_other_icon" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:clickable="true"
-                app:layout_constraintBottom_toBottomOf="@+id/img_car3"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@mipmap/ic_add_other_icon" />
-
-            <TextView
-                android:id="@+id/textViewcar4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Please capture car image"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layout_carReg4" />
-
-            <ImageView
-                android:id="@+id/img_car4"
-                android:layout_width="117dp"
-                android:layout_height="97dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/cam"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewcar4" />
+                app:layout_constraintTop_toBottomOf="@+id/img_car" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -295,6 +153,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="SAVE"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -310,9 +169,43 @@
         android:text="A resident can register up to five vehicles "
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
+    <Button
+        android:id="@+id/bt_done"
+        android:layout_width="150dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="DONE"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
+        app:layout_constraintTop_toTopOf="@+id/bt_save" />
+
+    <Button
+        android:id="@+id/bt_add"
+        android:layout_width="150dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="ADD"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
+        app:layout_constraintTop_toTopOf="@+id/bt_save" />
 </androidx.constraintlayout.widget.ConstraintLayout>
